@@ -4,18 +4,29 @@ package org.emau.icmvc.ganimed.ttp.cm2.internal;
  * ###license-information-start###
  * gICS - a Generic Informed Consent Service
  * __
- * Copyright (C) 2014 - 2018 The MOSAIC Project - Institut fuer Community
- * 							Medicine of the University Medicine Greifswald -
- * 							mosaic-projekt@uni-greifswald.de
+ * Copyright (C) 2014 - 2022 Trusted Third Party of the University Medicine Greifswald -
+ * 							kontakt-ths@uni-greifswald.de
  * 
  * 							concept and implementation
- * 							l.geidel
+ * 							l.geidel, c.hampf
  * 							web client
- * 							a.blumentritt, m.bialke
+ * 							a.blumentritt, m.bialke, f.m.moser
+ * 							fhir-api
+ * 							m.bialke
+ * 							docker
+ * 							r. schuldt
  * 
- * 							Selected functionalities of gICS were developed as part of the MAGIC Project (funded by the DFG HO 1937/5-1).
+ * 							The gICS was developed by the University Medicine Greifswald and published
+ *  							in 2014 as part of the research project "MOSAIC" (funded by the DFG HO 1937/2-1).
+ *  
+ * 							Selected functionalities of gICS were developed as
+ * 							part of the following research projects:
+ * 							- MAGIC (funded by the DFG HO 1937/5-1)
+ * 							- MIRACUM (funded by the German Federal Ministry of Education and Research 01ZZ1801M)
+ * 							- NUM-CODEX (funded by the German Federal Ministry of Education and Research 01KX2021)
  * 
  * 							please cite our publications
+ * 							https://doi.org/10.1186/s12967-020-02457-y
  * 							http://dx.doi.org/10.3414/ME14-01-0133
  * 							http://dx.doi.org/10.1186/s12967-015-0545-6
  * 							http://dx.doi.org/10.3205/17gmds146
@@ -40,7 +51,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
 import org.emau.icmvc.ganimed.ttp.cm2.exceptions.UnknownDomainException;
 import org.emau.icmvc.ganimed.ttp.cm2.exceptions.VersionConverterClassException;
 import org.emau.icmvc.ganimed.ttp.cm2.factories.ReflectionClassFactory;
@@ -53,126 +65,165 @@ import org.emau.icmvc.ganimed.ttp.cm2.version.VersionConverter;
  * @author geidell
  *
  */
-public class VersionConverterCache {
-
-	private static final Logger logger = Logger.getLogger(VersionConverterCache.class);
-	private static boolean initialised = false;
+public class VersionConverterCache
+{
+	private static final Logger LOGGER = LogManager.getLogger(VersionConverterCache.class);
+	private static volatile boolean INITIALISED = false;
 	// domain -> signerId -> signedPolicies
-	private static final ReentrantReadWriteLock cacheRWL = new ReentrantReadWriteLock();
+	private static final ReentrantReadWriteLock CACHE_RWL = new ReentrantReadWriteLock();
 	// key ist jeweils der domainName
-	private static final Map<String, VersionConverter> policyVersionConvertCache = new HashMap<String, VersionConverter>();
-	private static final Map<String, VersionConverter> moduleVersionConvertCache = new HashMap<String, VersionConverter>();
-	private static final Map<String, VersionConverter> ctVersionConvertCache = new HashMap<String, VersionConverter>();
+	private static final Map<String, VersionConverter> POLICY_VERSION_CONVERTER_CACHE = new HashMap<>();
+	private static final Map<String, VersionConverter> MODULE_VERSION_CONVERTER_CACHE = new HashMap<>();
+	private static final Map<String, VersionConverter> CT_VERSION_CONVERTER_CACHE = new HashMap<>();
 
-	public boolean isInitialised() {
-		return initialised;
+	private VersionConverterCache()
+	{}
+
+	public static boolean isInitialised()
+	{
+		return INITIALISED;
 	}
 
-	public void init(List<Domain> domains) throws VersionConverterClassException {
-		cacheRWL.writeLock().lock();
-		try {
-			if (initialised) {
+	public static void init(List<Domain> domains) throws VersionConverterClassException
+	{
+		CACHE_RWL.writeLock().lock();
+		try
+		{
+			if (INITIALISED)
+			{
 				return;
 			}
-			for (Domain domain : domains) {
+			for (Domain domain : domains)
+			{
 				addDomain(domain);
 			}
-			if (logger.isDebugEnabled()) {
-				logger.debug("cache filled");
+			if (LOGGER.isDebugEnabled())
+			{
+				LOGGER.debug("cache filled");
 			}
-			initialised = true;
-		} finally {
-			cacheRWL.writeLock().unlock();
+			INITIALISED = true;
+		}
+		finally
+		{
+			CACHE_RWL.writeLock().unlock();
 		}
 	}
 
-	public void addDomain(Domain domain) throws VersionConverterClassException {
+	public static void addDomain(Domain domain) throws VersionConverterClassException
+	{
 		String domainName = domain.getName();
-		cacheRWL.writeLock().lock();
-		try {
-			if (logger.isDebugEnabled()) {
-				logger.debug("add domain " + domainName);
+		CACHE_RWL.writeLock().lock();
+		try
+		{
+			if (LOGGER.isDebugEnabled())
+			{
+				LOGGER.debug("add domain " + domainName);
 			}
 			VersionConverter policyVersionConverter = initVersionConverter(domain.getPolicyVersionConverter());
 			VersionConverter moduleVersionConverter = initVersionConverter(domain.getModuleVersionConverter());
 			VersionConverter ctVersionConverter = initVersionConverter(domain.getCTVersionConverter());
-			policyVersionConvertCache.put(domainName, policyVersionConverter);
-			moduleVersionConvertCache.put(domainName, moduleVersionConverter);
-			ctVersionConvertCache.put(domainName, ctVersionConverter);
-			if (logger.isDebugEnabled()) {
-				logger.debug("domain " + domainName + " added");
+			POLICY_VERSION_CONVERTER_CACHE.put(domainName, policyVersionConverter);
+			MODULE_VERSION_CONVERTER_CACHE.put(domainName, moduleVersionConverter);
+			CT_VERSION_CONVERTER_CACHE.put(domainName, ctVersionConverter);
+			if (LOGGER.isDebugEnabled())
+			{
+				LOGGER.debug("domain " + domainName + " added");
 			}
-		} finally {
-			cacheRWL.writeLock().unlock();
+		}
+		finally
+		{
+			CACHE_RWL.writeLock().unlock();
 		}
 	}
 
-	private VersionConverter initVersionConverter(String versionConverterClass) throws VersionConverterClassException {
-		try {
-			Class<? extends VersionConverter> converterClass = ReflectionClassFactory.getInstance().getSubClass(versionConverterClass,
-					VersionConverter.class);
-			return converterClass.newInstance();
-		} catch (Exception e) {
+	private static VersionConverter initVersionConverter(String versionConverterClass) throws VersionConverterClassException
+	{
+		try
+		{
+			Class<? extends VersionConverter> converterClass = ReflectionClassFactory.getSubClass(versionConverterClass, VersionConverter.class);
+			return converterClass.getDeclaredConstructor().newInstance();
+		}
+		catch (Exception e)
+		{
 			String message = "exception while instantiating " + versionConverterClass + ": " + e.getMessage();
-			logger.error(message);
+			LOGGER.error(message);
 			throw new VersionConverterClassException(message, e);
 		}
 	}
 
-	public void removeDomain(String domainName) {
-		cacheRWL.writeLock().lock();
-		try {
-			policyVersionConvertCache.remove(domainName);
-			moduleVersionConvertCache.remove(domainName);
-			ctVersionConvertCache.remove(domainName);
-		} finally {
-			cacheRWL.writeLock().unlock();
+	public static void removeDomain(String domainName)
+	{
+		CACHE_RWL.writeLock().lock();
+		try
+		{
+			POLICY_VERSION_CONVERTER_CACHE.remove(domainName);
+			MODULE_VERSION_CONVERTER_CACHE.remove(domainName);
+			CT_VERSION_CONVERTER_CACHE.remove(domainName);
+		}
+		finally
+		{
+			CACHE_RWL.writeLock().unlock();
 		}
 	}
 
-	public VersionConverter getPolicyVersionConverter(String domainName) throws UnknownDomainException {
+	public static VersionConverter getPolicyVersionConverter(String domainName) throws UnknownDomainException
+	{
 		VersionConverter result;
-		cacheRWL.readLock().lock();
-		try {
-			result = policyVersionConvertCache.get(domainName);
-		} finally {
-			cacheRWL.readLock().unlock();
+		CACHE_RWL.readLock().lock();
+		try
+		{
+			result = POLICY_VERSION_CONVERTER_CACHE.get(domainName);
 		}
-		if (result == null) {
+		finally
+		{
+			CACHE_RWL.readLock().unlock();
+		}
+		if (result == null)
+		{
 			String message = "unknown domain: " + domainName;
-			logger.error(message);
+			LOGGER.error(message);
 			throw new UnknownDomainException(message);
 		}
 		return result;
 	}
 
-	public VersionConverter getModuleVersionConverter(String domainName) throws UnknownDomainException {
+	public static VersionConverter getModuleVersionConverter(String domainName) throws UnknownDomainException
+	{
 		VersionConverter result;
-		cacheRWL.readLock().lock();
-		try {
-			result = moduleVersionConvertCache.get(domainName);
-		} finally {
-			cacheRWL.readLock().unlock();
+		CACHE_RWL.readLock().lock();
+		try
+		{
+			result = MODULE_VERSION_CONVERTER_CACHE.get(domainName);
 		}
-		if (result == null) {
+		finally
+		{
+			CACHE_RWL.readLock().unlock();
+		}
+		if (result == null)
+		{
 			String message = "unknown domain: " + domainName;
-			logger.error(message);
+			LOGGER.error(message);
 			throw new UnknownDomainException(message);
 		}
 		return result;
 	}
 
-	public VersionConverter getCTVersionConverter(String domainName) throws UnknownDomainException {
+	public static VersionConverter getCTVersionConverter(String domainName) throws UnknownDomainException
+	{
 		VersionConverter result;
-		cacheRWL.readLock().lock();
-		try {
-			result = ctVersionConvertCache.get(domainName);
-		} finally {
-			cacheRWL.readLock().unlock();
+		CACHE_RWL.readLock().lock();
+		try
+		{
+			result = CT_VERSION_CONVERTER_CACHE.get(domainName);
 		}
-		if (result == null) {
+		finally
+		{
+			CACHE_RWL.readLock().unlock();
+		}
+		if (result == null)
+		{
 			String message = "unknown domain: " + domainName;
-			logger.error(message);
+			LOGGER.error(message);
 			throw new UnknownDomainException(message);
 		}
 		return result;
